Time: 2 ms (84.19%), Space: 45.4 MB (20.01%) - LeetHub