@@ -19,25 +19,21 @@ class Solution {
         List<List<Integer>> result = new ArrayList<>();
         if(root==null) return result;
         
-        helper(root, new ArrayList<>(), result, targetSum);
+        helper(root, new LinkedList<>(), result, targetSum);
         return result;
     }
     
-    public void helper(TreeNode root, List<Integer> curr, List<List<Integer>> result, int targetSum){
+    public void helper(TreeNode root, LinkedList<Integer> curr, List<List<Integer>> result, int targetSum){
+
         if(root == null) return;
 
-        curr.add(root.val);
+        curr.addLast(root.val);
         if(targetSum-root.val == 0 && root.left==null && root.right==null){
             result.add(new ArrayList<Integer>(curr));
         }
-        
         helper(root.left, curr, result, targetSum-root.val);
         helper(root.right, curr, result, targetSum-root.val);
-       curr.remove(curr.size()-1);
-
-        // for(int i=0; i<curr.size(); i++){
-        //     if(curr.get(i)==root.val) curr.remove(i);
-        // }
+        curr.removeLast();
         
     }
 }
